--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.4.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
     "my-next-app": "file:",
