--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@radix-ui/react-slot": "^1.1.1",
+    "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -19,10 +20,6 @@
     "lucide-react": "^0.474.0",
     "my-next-app": "file:",
     "next": "15.1.5",
-<<<<<<< HEAD
-    "next-auth": "^4.24.11",
-=======
->>>>>>> 7594d66897521a078945b36b700feff140da0c7b
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
