--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
+    "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "viem": "^2.23.2",
     "wagmi": "^2.14.11"
