--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "my-next-app": "file:",
     "next": "15.1.5",
     "next-auth": "^4.24.11",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.3",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
