--- a/package.json
+++ b/package.json
@@ -32,8 +32,11 @@
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.1.3",
+    "react-select": "^5.10.0",
+    "react-select-country-list": "^2.2.3",
     "react-toastify": "^11.0.3",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
