--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.2.0",
     "react-select": "^5.10.0",
     "react-select-country-list": "^2.2.3",
