--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "country-list-with-dial-code-and-flag": "^5.1.0",
     "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.474.0",
@@ -29,9 +30,11 @@
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-country-region-selector": "^4.0.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.4.0",
+    "react-intl-tel-input": "^8.2.0",
     "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
     "react-responsive": "^10.0.1",
