--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react-country-region-selector": "^4.0.2",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-phone-input-2": "^2.15.1",
     "react-qr-code": "^2.0.15",
     "react-responsive": "^10.0.1",
@@ -41,6 +41,7 @@
     "react-select": "^5.10.0",
     "react-select-country-list": "^2.2.3",
     "react-toastify": "^11.0.3",
+    "recharts": "^2.15.1",
     "sharp": "^0.33.5",
     "tailwind-merge": "^2.6.0",
     "viem": "^2.23.2",
